@@ -32,7 +32,7 @@
 void log_api_error(const char *api);
 void log_audio_file_error(const char *dir, const char *file);
 void log_dir_file_open(const char *dir, const char *file);
-void log_file_name(const char *dir, const char *file);
+void log_file_name_case(const char *dir, const char *file);
 void log_file_open(const char *fname);
 void log_file_read(const char *dir, const char *file);
 void log_font_file_error(const char *font);
